CB-26589 Remove auxiliary clusters as part of the environment deletion.